docs: Documented the POST - /users endpoint
