# openapi.json
@@ -34,7 +34,7 @@
             }
           }
         },
-        "response": {
+        "responses": {
           "200": {
             "description": "Login successful",
             "content": {
@@ -86,7 +86,114 @@
           "required": true,
           "content": {
             "application/json": {
-              "schema": null
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email",
+                  "password",
+                  "permissions"
+                ],
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "example": "johndoe@gmail.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "Supersecretpassword"
+                  },
+                  "permissions": {
+                    "type": "object",
+                    "properties": {
+                      "manage_podcasts": {
+                        "type": "boolean"
+                      },
+                      "manage_posts": {
+                        "type": "boolean"
+                      },
+                      "view_podcasts": {
+                        "type": "boolean"
+                      },
+                      "view_posts": {
+                        "type": "boolean"
+                      },
+                      "manage_cyphers": {
+                        "type": "boolean"
+                      },
+                      "view_cyphers": {
+                        "type": "boolean"
+                      },
+                      "manage_users": {
+                        "type": "boolean"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "User created with the next informations"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "johndoe@gmail.com"
+                    },
+                    "permissions": {
+                      "type": "object",
+                      "properties": {
+                        "manage_podcasts": {
+                          "type": "boolean"
+                        },
+                        "manage_posts": {
+                          "type": "boolean"
+                        },
+                        "view_podcasts": {
+                          "type": "boolean"
+                        },
+                        "view_posts": {
+                          "type": "boolean"
+                        },
+                        "manage_cyphers": {
+                          "type": "boolean"
+                        },
+                        "view_cyphers": {
+                          "type": "boolean"
+                        },
+                        "manage_users": {
+                          "type": "boolean"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "User already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "User with this email already exists"
+                    }
+                  }
+                }
+              }
             }
           }
         }
